--- a/js/tmpl/layout.ejs
+++ b/js/tmpl/layout.ejs
@@ -1,5 +1,10 @@
 <div id="header">
   <div id="login-version">
+    <div id="hostlist">
+      <table class="form">
+        <tr><td>当前主机(集群)：</td><td id="curhost" class="curhost"></td><td><select id="host"></select></td></tr>
+      </table>
+    </div>
     <div id="login-details"></div>
     <form action="#/logout" method="put">
       <input type="submit" value="Log out"/>
