--- a/js/tmpl/login.ejs
+++ b/js/tmpl/login.ejs
@@ -5,6 +5,10 @@
     <div id="login-status"></div>
     <table class="form">
       <tr>
+        <th><label>Host:</label></th>
+        <td><select id="host"></select></td>
+      </tr>
+      <tr>
         <th><label>Username:</label></th>
         <td><input type="text" name="username"/><span class="mand">*</span></td>
       </tr>
