--- a/js/tmpl/exchanges.ejs
+++ b/js/tmpl/exchanges.ejs
@@ -1,10 +1,9 @@
 <h1>Exchanges</h1>
 <div class="section">
-  <h2>All exchanges</h2>
-  <div class="hider">
-<%= filter_ui(exchanges) %>
-  <div class="updatable">
-<% if (exchanges.length > 0) { %>
+   <%= pagiante_ui(exchanges, 'exchanges') %>
+</div> 
+<div class="updatable">
+<% if (exchanges.items.length > 0) { %>
 <table class="list">
  <thead>
   <tr>
@@ -12,19 +11,33 @@
    <th><%= fmt_sort('Virtual host', 'vhost') %></th>
 <% } %>
    <th><%= fmt_sort('Name',         'name') %></th>
+<% if (show_column('exchanges', 'type')) { %>
    <th><%= fmt_sort('Type',         'type') %></th>
-   <th><%= fmt_sort('Policy',       'policy') %></th>
-   <th>Parameters</th>
-<% if (statistics_level == 'fine') { %>
+<% } %>
+<% if (show_column('exchanges', 'features')) { %>
+   <th>Features</th>
+<% } %>
+<% if (show_column('exchanges', 'features_no_policy')) { %>
+   <th>Features</th>
+<% } %>
+<% if (show_column('exchanges', 'policy')) { %>
+    <th><%= fmt_sort('Policy','policy') %></th>
+<% } %>
+<% if (rates_mode != 'none') { %>
+<% if (show_column('exchanges', 'rate-in')) { %>
    <th><%= fmt_sort('Message rate in',   'message_stats.publish_in_details.rate') %></th>
+<% } %>
+<% if (show_column('exchanges', 'rate-out')) { %>
    <th><%= fmt_sort('Message rate out',  'message_stats.publish_out_details.rate') %></th>
 <% } %>
+<% } %>
+    <th class="plus-minus"><span class="popup-options-link" title="Click to change columns" type="columns" for="exchanges">+/-</span></th>
   </tr>
  </thead>
  <tbody>
 <%
-  for (var i = 0; i < exchanges.length; i++) {
-    var exchange = exchanges[i];
+  for (var i = 0; i < exchanges.items.length; i++) {
+    var exchange = exchanges.items[i];
 %>
   <tr<%= alt_rows(i, exchange.arguments)%>>
 <% if (vhosts_interesting) { %>
@@ -32,11 +45,29 @@
 <% } %>
    <td><%= link_exchange(exchange.vhost, exchange.name, exchange.arguments) %></td>
    <td class="c"><%= fmt_exchange_type(exchange.type) %></td>
-   <td class="c"><%= fmt_string(exchange.policy, '') %></td>
-   <td class="c"><%= fmt_parameters_short(exchange) %></td>
-<% if (statistics_level == 'fine') { %>
-   <td class="r"><%= fmt_rate(exchange.message_stats, 'publish_in') %></td>
-   <td class="r"><%= fmt_rate(exchange.message_stats, 'publish_out') %></td>
+<% if (show_column('exchanges', 'features')) { %>
+   <td class="c">
+     <%= fmt_features_short(exchange) %>
+     <%= fmt_policy_short(exchange) %>
+   </td>
+<% } %>
+<% if (show_column('exchanges', 'features_no_policy')) { %>
+   <td class="c">
+     <%= fmt_features_short(exchange) %>
+   </td>
+<% } %>
+<% if (show_column('exchanges', 'policy')) { %>
+   <td class="c">
+     <%= link_policy(exchange.vhost, exchange.policy) %>
+   </td>
+<% } %>
+<% if (rates_mode != 'none') { %>
+<% if (show_column('exchanges', 'rate-in')) { %>
+   <td class="r"><%= fmt_detail_rate(exchange.message_stats, 'publish_in') %></td>
+<% } %>
+<% if (show_column('exchanges', 'rate-out')) { %>
+   <td class="r"><%= fmt_detail_rate(exchange.message_stats, 'publish_out') %></td>
+<% } %>
 <% } %>
   </tr>
   <% } %>
@@ -60,7 +91,7 @@
           <td>
             <select name="vhost">
               <% for (var i = 0; i < vhosts.length; i++) { %>
-              <option value="<%= fmt_string(vhosts[i].name) %>"><%= fmt_string(vhosts[i].name) %></option>
+              <option value="<%= fmt_string(vhosts[i].name) %>" <%= (vhosts[i].name === current_vhost) ? 'selected="selected"' : '' %>><%= fmt_string(vhosts[i].name) %></option>
               <% } %>
             </select>
           </td>
@@ -113,13 +144,18 @@
           </td>
         </tr>
         <tr>
-          <th><label>Alternate exchange: <span class="help" id="exchange-alternate"></span></label></th>
-          <td><input type="text" name="alternate-exchange"/></td>
-        </tr>
-        <tr>
           <th><label>Arguments:</label></th>
           <td>
             <div class="multifield" id="arguments"></div>
+            <table class="argument-links">
+              <tr>
+                <td>Add</td>
+                <td>
+                  <span class="argument-link" field="arguments" key="alternate-exchange" type="string">Alternate exchange</span>
+                  <span class="help" id="exchange-alternate"></span>
+                </td>
+              </tr>
+            </table>
           </td>
         </tr>
       </table>
