--- a/js/tmpl/connection.ejs
+++ b/js/tmpl/connection.ejs
@@ -1,25 +1,26 @@
-<h1>Connection <b><%= fmt_string(connection.name) %></b></h1>
+<h1>Connection <%= fmt_string(connection.name) %> <%= fmt_maybe_vhost(connection.vhost) %></h1>
 
 <div class="section">
 <h2>Overview</h2>
-<div class="hider">
+<div class="hider updatable">
   <%= data_rates('data-rates-conn', connection, 'Data rates') %>
 
-<div class="updatable">
 <h3>Details</h3>
-<table class="facts">
+<table class="facts facts-l">
 <% if (nodes_interesting) { %>
 <tr>
   <th>Node</th>
   <td><%= fmt_node(connection.node) %></td>
 </tr>
 <% } %>
-<% if (vhosts_interesting) { %>
+
+<% if (connection.client_properties.connection_name) { %>
 <tr>
- <th>Virtual host</th>
- <td><%= fmt_string(connection.vhost) %></td>
+  <th>Client-provided name</th>
+  <td><%= fmt_string(connection.client_properties.connection_name) %></td>
 </tr>
 <% } %>
+
 <tr>
  <th>Username</th>
  <td><%= fmt_string(connection.user) %></td>
@@ -27,6 +28,10 @@
 <tr>
  <th>Protocol</th>
  <td><%= connection.protocol %></td>
+</tr>
+<tr>
+  <th>Connected at</th>
+  <td><%= fmt_timestamp(connection.connected_at) %></td>
 </tr>
 
 <% if (connection.ssl) { %>
@@ -51,7 +56,7 @@
  <td><%= fmt_object_state(connection) %></td>
 </tr>
 <tr>
- <th>Timeout</th>
+ <th>Heartbeat</th>
  <td><%= fmt_time(connection.timeout, 's') %></td>
 </tr>
 <tr>
@@ -63,8 +68,8 @@
  <td><%= connection.channel_max %> channels</td>
 </tr>
 </table>
+
 <% } %>
-</div>
 
 </div>
 </div>
@@ -128,6 +133,46 @@
 </div>
 </div>
 <% } %>
+
+<% if(connection.reductions || connection.garbage_collection) { %>
+<div class="section-hidden">
+<h2>Runtime Metrics (Advanced)</h2>
+ <div class="hider updatable">
+ <%= data_reductions('reductions-rates-conn', connection) %>
+ <table class="facts">
+    <% if (connection.garbage_collection.min_bin_vheap_size) { %>
+        <tr>
+        <th>Minimum binary virtual heap size in words (min_bin_vheap_size)</th>
+        <td><%= connection.garbage_collection.min_bin_vheap_size %></td>
+        </tr>
+    <% } %>
+
+    <% if (connection.garbage_collection.min_heap_size) { %>
+        <tr>
+        <th>Minimum heap size in words (min_heap_size)</th>
+        <td><%= connection.garbage_collection.min_heap_size %></td>
+        </tr>
+    <% } %>
+
+    <% if (connection.garbage_collection.fullsweep_after) { %>
+        <tr>
+        <th>Maximum generational collections before fullsweep (fullsweep_after)</th>
+        <td><%= connection.garbage_collection.fullsweep_after %></td>
+        </tr>
+    <% } %>
+
+    <% if (connection.garbage_collection.minor_gcs) { %>
+        <tr>
+        <th>Number of minor GCs (minor_gcs)</th>
+        <td><%= connection.garbage_collection.minor_gcs %></td>
+        </tr>
+    <% } %>
+ </table>
+ </div>
+</div>
+
+<% } %>
+
 
 <div class="section-hidden">
   <h2>Close this connection</h2>
