--- a/js/tmpl/exchange.ejs
+++ b/js/tmpl/exchange.ejs
@@ -1,13 +1,11 @@
-<h1>Exchange: <b><%= fmt_exchange(exchange.name) %></b></h1>
+<h1>Exchange: <b><%= fmt_exchange(exchange.name) %></b><%= fmt_maybe_vhost(exchange.vhost) %></h1>
 
 <div class="section">
   <h2>Overview</h2>
-  <div class="hider">
-<% if (statistics_level == 'fine') { %>
+  <div class="hider updatable">
+<% if (rates_mode != 'none') { %>
     <%= message_rates('msg-rates-x', exchange.message_stats) %>
 <% } %>
-
-    <div class="updatable">
     <h3>Details</h3>
     <table class="facts">
       <tr>
@@ -15,25 +13,18 @@
         <td class="l"><%= fmt_exchange_type(exchange.type) %></td>
       </tr>
       <tr>
-        <th>Parameters</th>
-        <td><%= fmt_parameters(exchange) %></td>
+        <th>Features</th>
+        <td><%= fmt_features(exchange) %></td>
       </tr>
       <tr>
         <th>Policy</th>
-        <td><%= fmt_string(exchange.policy, '') %></td>
+        <td><%= link_policy(exchange.vhost, exchange.policy) %></td>
       </tr>
-<% if (vhosts_interesting) { %>
-      <tr>
-        <th>Virtual host</th>
-        <td><%= fmt_string(exchange.vhost) %></td>
-      </tr>
-<% } %>
     </table>
-    </div>
   </div>
 </div>
 
-<% if (statistics_level == 'fine') { %>
+<% if (rates_mode == 'detailed') { %>
 <div class="section-hidden">
 <h2>Message rates breakdown</h2>
 <div class="hider updatable">
@@ -65,7 +56,7 @@
   <h3>Default exchange</h3>
   <p>
     The default exchange is implicitly bound to every queue, with a
-    routing key equal to the queue name. It it not possible to
+    routing key equal to the queue name. It is not possible to
     explicitly bind to, or unbind from the default exchange. It also
     cannot be deleted.
   </p>
