--- a/js/tmpl/login.ejs
+++ b/js/tmpl/login.ejs
@@ -1,13 +1,9 @@
 <div id="login">
-  <p><img src="img/rabbitmqlogo.png" width="204" height="37"/></p>
+  <p><img src="img/rabbitmqlogo.png" alt="RabbitMQ logo" width="204" height="37"/></p>
 
   <form action="#/login" method="put">
     <div id="login-status"></div>
     <table class="form">
-      <tr>
-        <th><label>Host:</label></th>
-        <td><select id="host"></select></td>
-      </tr>
       <tr>
         <th><label>Username:</label></th>
         <td><input type="text" name="username"/><span class="mand">*</span></td>
@@ -16,7 +12,10 @@
         <th><label>Password:</label></th>
         <td><input type="password" name="password"/><span class="mand">*</span></td>
       </tr>
+      <tr>
+        <th>&nbsp;</th>
+        <td><input type="submit" value="Login"/></td>
+      </tr>
     </table>
-    <p><input type="submit" value="Login"/></p>
   </form>
 </div>
