--- a/js/tmpl/msg-detail-publishes.ejs
+++ b/js/tmpl/msg-detail-publishes.ejs
@@ -1,7 +1,6 @@
 <h3><%= label %></h3>
 <% if (object && object.length > 0) { %>
 <%
-     var col_return_unroutable = !is_col_empty(object, 'return_unroutable', function(o) {return o.stats;});
      var col_confirm = mode != 'exchange-outgoing';
 %>
 <table class="list">
@@ -19,9 +18,6 @@
 <% if (col_confirm) { %>
     <th>confirm</th>
 <% } %>
-<% if (col_return_unroutable) { %>
-    <th>return (mandatory)</th>
-<% } %>
   </tr>
 <%
      for (var i = 0; i < object.length; i++) {
@@ -38,12 +34,9 @@
 <% } else { %>
       <td><%= link_exchange(pub.exchange.vhost, pub.exchange.name) %></td>
 <% } %>
-      <td class="r"><%= fmt_rate(pub.stats, 'publish') %></td>
+      <td class="r"><%= fmt_detail_rate(pub.stats, 'publish') %></td>
 <% if (col_confirm) { %>
-      <td class="r"><%= fmt_rate(pub.stats, 'confirm') %></td>
-<% } %>
-<% if (col_return_unroutable) { %>
-      <td class="r"><%= fmt_rate(pub.stats, 'return_unroutable') %></td>
+      <td class="r"><%= fmt_detail_rate(pub.stats, 'confirm') %></td>
 <% } %>
     </tr>
 <% } %>
