--- a/js/tmpl/overview.ejs
+++ b/js/tmpl/overview.ejs
@@ -2,49 +2,54 @@
 <% if (user_monitor) { %>
 <%= format('partition', {'nodes': nodes}) %>
 <% } %>
-<div class="section">
-<h2>Totals</h2>
-<div class="hider">
-<% if (overview.statistics_db_node != 'not_running') { %>
-  <%= queue_lengths('lengths-over', overview.queue_totals) %>
-<% if (statistics_level == 'fine') { %>
-  <%= message_rates('msg-rates-over', overview.message_stats) %>
-<% } %>
-<% } else { %>
-    Totals not available
-<% } %>
 
 <div class="updatable">
+<% if (overview.statistics_db_event_queue > 1000) { %>
+<p class="warning">
+  The management statistics database currently has a queue
+  of <b><%= overview.statistics_db_event_queue %></b> events to
+  process. If this number keeps increasing, so will the memory used by
+  the management plugin.
+
+  <% if (overview.rates_mode != 'none') { %>
+  You may find it useful to set the <code>rates_mode</code> config item
+  to <code>none</code>.
+  <% } %>
+</p>
+<% } %>
+</div>
+
+<div class="section">
+<h2>Totals</h2>
+<div class="hider updatable">
+<%= queue_lengths('lengths-over', overview.queue_totals) %>
+<% if (rates_mode != 'none') { %>
+  <%= message_rates('msg-rates-over', overview.message_stats) %>
+<% } %>
+
+<% if (overview.object_totals) { %>
   <h3>Global counts <span class="help" id="resource-counts"></span></h3>
 
-  <div class="box">
-    <div class="micro-highlight">
-      <a href="#/connections">
-        Connections: <strong><%= overview.object_totals.connections %></strong>
-      </a>
-    </div>
-    <div class="micro-highlight">
-      <a href="#/channels">
-        Channels: <strong><%= overview.object_totals.channels %></strong>
-      </a>
-    </div>
-    <div class="micro-highlight">
-      <a href="#/exchanges">
-        Exchanges: <strong><%= overview.object_totals.exchanges %></strong>
-      </a>
-    </div>
-    <div class="micro-highlight">
-      <a href="#/queues">
-        Queues: <strong><%= overview.object_totals.queues %></strong>
-      </a>
-    </div>
-<% if (overview.object_totals['consumers'] != undefined) { %>    <tr>
-    <div class="micro-highlight">
-      Consumers: <strong><%= overview.object_totals.consumers %></strong>
-    </div>
+  <ul id="global-counts">
+    <li>
+      <a href="#/connections" class="button">Connections: <strong><%= overview.object_totals.connections %></strong></a>
+    </li>
+    <li>
+      <a href="#/channels" class="button">Channels: <strong><%= overview.object_totals.channels %></strong></a>
+    </li>
+    <li>
+      <a href="#/exchanges" class="button">Exchanges: <strong><%= overview.object_totals.exchanges %></strong></a>
+    </li>
+    <li>
+      <a href="#/queues" class="button">Queues: <strong><%= overview.object_totals.queues %></strong></a>
+    </li>
+<% if (overview.object_totals['consumers'] != undefined) { %>
+    <li>
+      <a href="#" class="button disabled">Consumers: <strong><%= overview.object_totals.consumers %></strong></a>
+    </li>
 <% } %>
-  </div>
- </div>
+  </ul>
+<% } %>
 
 </div>
 </div>
@@ -52,112 +57,143 @@
 <% if (user_monitor) { %>
 <div class="section">
 <h2>Nodes</h2>
+
 <div class="hider updatable">
+
 <table class="list">
   <tr>
     <th>Name</th>
-    <th>
-      File descriptors <span class="help" id="file-descriptors"></span>
-    </th>
-    <th>
-      Socket descriptors <span class="help" id="socket-descriptors"></span>
-    </th>
-    <th>
-      Erlang processes
-    </th>
-    <th>
-      Memory
-    </th>
-    <th>
-      Disk space
-    </th>
+  <% if (show_column('overview', 'file_descriptors')) { %>
+    <th>File descriptors <span class="help" id="file-descriptors"></span></th>
+  <% } %>
+  <% if (show_column('overview', 'socket_descriptors')) { %>
+    <th>Socket descriptors <span class="help" id="socket-descriptors"></span></th>
+  <% } %>
+  <% if (show_column('overview', 'erlang_processes')) { %>
+    <th>Erlang processes</th>
+  <% } %>
+  <% if (show_column('overview', 'memory')) { %>
+    <th>Memory</th>
+  <% } %>
+  <% if (show_column('overview', 'disk_space')) { %>
+    <th>Disk space</th>
+  <% } %>
+  <% if (show_column('overview', 'uptime')) { %>
     <th>Uptime</th>
-    <th>Type</th>
+  <% } %>
+  <% if (show_column('overview', 'info')) { %>
+    <th>Info</th>
+  <% } %>
+  <% if (user_administrator && show_column('overview', 'reset_stats')) { %>
+    <th>Reset stats</th>
+  <% } %>
+    <th class="plus-minus"><span class="popup-options-link" title="Click to change columns" type="columns" for="overview">+/-</span></th>
   </tr>
 <%
    for (var i = 0; i < nodes.length; i++) {
      var node = nodes[i];
+     var colspan = group_count('overview', 'Statistics', []) +
+                   group_count('overview', 'General', []);
 %>
    <tr<%= alt_rows(i)%>>
      <td>
-       <%= link_node(node.name) %>
+       <a href="#/nodes/<%= esc(node.name) %>" class="button"><%= fmt_node(node.name) %></a>
        <% if (rabbit_versions_interesting) { %>
          <sub>RabbitMQ <%= fmt_rabbit_version(node.applications) %></sub>
        <% } %>
      </td>
 <% if (!node.running) { %>
-     <td colspan="6">
+     <td colspan="<%= colspan %>">
        <div class="status-red">
          Node not running
        </div>
      </td>
 <% } else if (node.os_pid == undefined) { %>
-     <td colspan="6">
+     <td colspan="<%= colspan %>">
        <div class="status-yellow">
-         <acronym title="The rabbitmq_management_agent plugin should be enabled on this node. If it is not, various statistics will be inaccurate.">
-           Node statistics not available</acronym>
+         <abbr title="The rabbitmq_management_agent plugin should be enabled on this node. If it is not, various statistics will be inaccurate.">
+           Node statistics not available</abbr>
        </div>
      </td>
 <% } else { %>
+  <% if (show_column('overview', 'file_descriptors')) { %>
      <td>
-<%= fmt_resource_bar_count(fmt_fd_used(node.fd_used, node.fd_total), node.fd_total, FD_THRESHOLDS) %>
+    <% if (node.fd_used != 'install_handle_from_sysinternals') { %>
+        <%= node_stat_count_bar('fd_used', 'fd_total', node, FD_THRESHOLDS) %>
+    <% } else { %>
+        <p class="c">handle.exe missing <span class="help" id="handle-exe"></span><sub><%= node.fd_total %> available</sub></p>
+
+    <% } %>
      </td>
+  <% } %>
+  <% if (show_column('overview', 'socket_descriptors')) { %>
      <td>
-<%= fmt_resource_bar_count(node.sockets_used, node.sockets_total, FD_THRESHOLDS) %>
+        <%= node_stat_count_bar('sockets_used', 'sockets_total', node, FD_THRESHOLDS) %>
      </td>
+  <% } %>
+  <% if (show_column('overview', 'erlang_processes')) { %>
      <td>
-<%= fmt_resource_bar_count(node.proc_used, node.proc_total, PROCESS_THRESHOLDS) %>
+
+        <%= node_stat_count_bar('proc_used', 'proc_total', node, PROCESS_THRESHOLDS) %>
      </td>
+  <% } %>
+  <% if (show_column('overview', 'memory')) { %>
      <td>
-<% if (node.mem_limit != 'memory_monitoring_disabled') { %>
-   <%= fmt_resource_bar(fmt_bytes(node.mem_used),
-                        fmt_bytes(node.mem_limit) + ' high watermark',
-                        node.mem_used / node.mem_limit,
-                        node.mem_alarm ? 'red' : 'green',
-                        node.mem_alarm ? 'memory-alarm' : null) %>
-<% } else { %>
+
+    <% if (node.mem_limit != 'memory_monitoring_disabled') { %>
+        <%= node_stat_bar('mem_used', 'mem_limit', 'high watermark', node, fmt_bytes_axis,
+                          node.mem_alarm ? 'red' : 'green',
+                          node.mem_alarm ? 'memory-alarm' : null) %>
+    <% } else { %>
        <%= fmt_bytes(node.mem_used) %>
-<% } %>
+    <% } %>
      </td>
+  <% } %>
+  <% if (show_column('overview', 'disk_space')) { %>
      <td>
-<% if (node.disk_free_limit != 'disk_free_monitoring_disabled') { %>
-   <%= fmt_resource_bar(fmt_bytes(node.disk_free),
-                        fmt_bytes(node.disk_free_limit) + ' low watermark',
-                        node.disk_free_limit / node.disk_free,
-                        node.disk_free_alarm ? 'red' : 'green',
-                        node.disk_free_alarm ? 'disk-free-alarm' : null) %>
-<% } else { %>
+
+    <% if (node.disk_free_limit != 'disk_free_monitoring_disabled') { %>
+        <%= node_stat_bar('disk_free', 'disk_free_limit', 'low watermark', node, fmt_bytes_axis,
+                          node.disk_free_alarm ? 'red' : 'green',
+                          node.disk_free_alarm ? 'disk_free-alarm' : null, true) %>
+    <% } else { %>
          (not available)
-<% } %>
+    <% } %>
      </td>
-     <td class="r">
-       <%= fmt_uptime(node.uptime) %>
-     </td>
-<% } %>
-     <td class="c">
+  <% } %>
+  <% if (show_column('overview', 'uptime')) { %>
+     <td><span><%= fmt_uptime(node.uptime) %></span></td>
+  <% } %>
+  <% if (show_column('overview', 'info')) { %>
+     <td>
+         <abbr title="Message rates"><%= fmt_string(node.rates_mode) %></abbr>
        <% if (node.type == 'disc') { %>
-         <acronym title="Broker definitions are held on disc.">Disc</acronym>
+         <abbr title="Broker definitions are held on disc.">disc</abbr>
        <% } else { %>
-         <acronym title="Broker definitions are held in RAM. Messages will still be written to disc if necessary.">RAM</acronym>
+         <abbr title="Broker definitions are held in RAM. Messages will still be written to disc if necessary.">RAM</abbr>
        <% } %>
-       <% if (overview.statistics_db_node == node.name) { %>
-         <acronym title="This node contains the management statistics database">Stats</acronym>
-       <% } %>
-       <% if (overview.node == node.name) { %>
-         <acronym title="You are accessing the management UI from this node.">*</acronym>
-       <% } %>
+       <%= fmt_plugins_small(node) %>
      </td>
+  <% } %>
+  <% if(user_administrator && show_column('overview', 'reset_stats')) { %>
+    <td>
+      <form action="#/reset_node" method="delete" class="confirm inline-form">
+        <input type="hidden" name="node" value="<%= node.name %>"/>
+        <input type="submit" value="This node"/>
+      </form>
+      <form action="#/reset" method="delete" class="confirm inline-form-right">
+          <input type="submit" value="All nodes"/>
+      </form>
+  <% } %>
+<% } %>
    </tr>
 <% } %>
 </table>
 
-<% if (overview.statistics_db_node == 'not_running') { %>
-  <p class="status-error">Statistics database could not be contacted. Message rates and queue lengths will not be shown.</p>
-<% } %>
 </div>
 </div>
 
-<div class="section">
+<div class="section-hidden">
 <h2>Ports and contexts</h2>
 <div class="hider updatable">
 <h3>Listening ports</h3>
@@ -216,39 +252,75 @@
 </div>
 
 <div class="section-hidden administrator-only">
-<h2>Import / export definitions</h2>
+<h2>Export definitions</h2>
 <div class="hider">
-  <form method="post" enctype="multipart/form-data">
     <table class="two-col-layout">
       <tr>
         <td>
-          <h3>Export</h3>
           <p>
             <label for="download-filename">Filename for download:</label><br/>
             <input type="text" id="download-filename" value="<%= fmt_download_filename(overview.node) %>" class="wide" />
           </p>
         </td>
         <td>
-          <h3>Import</h3>
-          <p>
-            <label>Definitions file:</label><br/>
-            <input type="file" name="file"/>
-          </p>
-        </td>
-      </tr>
-      <tr>
-        <td>
           <p>
             <button id="download-definitions">Download broker definitions</button>
             <span class="help" id="export-definitions"></span>
           </p>
         </td>
+      </tr>
+      <tr>
+        <td>
+            <% if (vhosts_interesting) { %>
+          <label>Virtual host:</label>
+            <select name="vhost-download">
+              <option value="all">All</option>
+              <% for (var i = 0; i < vhosts.length; i++) { %>
+              <option value="<%= fmt_string(vhosts[i].name) %>"><%= fmt_string(vhosts[i].name) %></option>
+              <% } %>
+            </select> <span class="help" id="export-definitions-vhost"></span>
+<% } else { %>
+            <input type="hidden" name="vhost" value="all"/>
+<% } %>
+        </td>
+      </tr>
+    </table>
+</div>
+</div>
+
+<div class="section-hidden administrator-only">
+<h2>Import definitions</h2>
+<div class="hider">
+  <form  method="post" enctype="multipart/form-data">
+    <table class="two-col-layout">
+      <tr>
         <td>
           <p>
-            <input type="hidden" name="redirect" value="../#/import-succeeded"/>
-            <input type="submit" value="Upload broker definitions" onclick="submit_import($(this).closest('form')[0]); return false" />
+            <label>Definitions file:</label><br/>
+            <input type="file" name="file"/>
+          </p>
+        </td>
+        <td>
+          <p>
+            <input type="submit" value="Upload broker definitions" onclick="submit_import($(this).closest('form')[0]); return false"/>
             <span class="help" id="import-definitions"></span>
           </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+         <% if (vhosts_interesting) { %>
+          <label>Virtual host:</label>
+            <select name="vhost-upload">
+              <option value="all">All</option>
+              <% for (var i = 0; i < vhosts.length; i++) { %>
+              <option value="<%= fmt_string(vhosts[i].name) %>"><%= fmt_string(vhosts[i].name) %></option>
+              <% } %>
+            </select> <span class="help" id="import-definitions-vhost"></span>
+
+<% } else { %>
+            <input type="hidden" name="vhost" value="all"/>
+<% } %>
         </td>
       </tr>
     </table>
@@ -256,21 +328,18 @@
 </div>
 </div>
 
-<% if (overview.statistics_level != 'fine') { %>
+<% if (overview.rates_mode == 'none') { %>
 <div class="section-hidden">
-<h2>Message Rates Disabled</h2>
+<h2>Message rates disabled</h2>
 <div class="hider">
 <p>
-  The statistics level in this RabbitMQ server is currently set to
-  <code><%= overview.statistics_level %></code>. Message rates are therefore
-  disabled.
+  Message rates are currently disabled.
 </p>
 <p>
-  To re-enable message rates, edit your configuration file and either
-  set <code>collect_statistics</code> to <code>fine</code> in
-  the <code>rabbit</code> application, or
-  set <code>force_fine_statistics</code> to <code>true</code> in
-  the <code>rabbitmq_management_agent</code> application
+  To re-enable message rates, edit your configuration file and
+  set <code>rates_mode</code> to <code>basic</code>
+  or <code>detailed</code> in the <code>rabbitmq_management</code>
+  application
 </p>
 </div>
 </div>
