--- a/js/tmpl/users.ejs
+++ b/js/tmpl/users.ejs
@@ -30,7 +30,7 @@
   </tbody>
 </table>
 <% } else { %>
-    <p>... no vhosts ...</p>
+    <p>... no users ...</p>
 <% } %>
     <p><span class="help" id="internal-users-only"></span></p>
   </div>
@@ -76,13 +76,19 @@
           <td>
             <input type="text" name="tags" id="tags" />
             <span class="help" id="user-tags"/>
-            <sub>
-              [<span class="tag-link" tag="administrator">Admin</span>]
-              [<span class="tag-link" tag="monitoring">Monitoring</span>]
-              [<span class="tag-link" tag="policymaker">Policymaker</span>]
-              [<span class="tag-link" tag="management">Management</span>]
-              [<span class="tag-link" tag="">None</span>]
-            </sub>
+            <table class="argument-links">
+              <tr>
+                <td>Set</td>
+                <td>
+                  <span class="tag-link" tag="administrator">Admin</span> |
+                  <span class="tag-link" tag="monitoring">Monitoring</span> |
+                  <span class="tag-link" tag="policymaker">Policymaker</span><br />
+                  <span class="tag-link" tag="management">Management</span> |
+                  <span class="tag-link" tag="impersonator">Impersonator</span> |
+                  <span class="tag-link" tag="">None</span>
+                </td>
+              </tr>
+            </table>
           </td>
         </tr>
       </table>
