--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ a:hover { color: #F60; }
 #logo { padding: 0 0 2em 0; }
 #logo img { margin: 1em 0 -0.3em 1em; border: none; }
 
+#hostlist {float: right; right:50%; width:550px; padding: 0px;}
+#hostlist td {width: 100px; text-align: right; font-size: 16px; font-weight: bold; text-decoration: none; white-space: nowrap;}
+.curhost {color: red!important;background-color: #fff!important; font-size: 20px; text-align: left; padding: 0 10px;}
+
 #versions abbr { background: #f0f0f0; margin: 0 0 0 1em; }
 
 .status-ok { }
@@ -282,7 +286,7 @@ table.form { margin-bottom: 0.5em; }
 table.form th { text-align: right; vertical-align: top; }
 table.form input[type=text], table.form input[type=password] { width: 200px; }
 table.form input[type=text].wide, table.form input[type=password].wide { width: 300px; }
-table.form select { width: auto; }
+table.form select { width: 200px; }
 table.form select.narrow { width: 110px; }
 table.form .multifield { margin: 0; padding: 0; }
 table.form .multifield td { margin: 0; padding: 0; vertical-align: top; }
