--- a/js/tmpl/partition.ejs
+++ b/js/tmpl/partition.ejs
@@ -14,7 +14,7 @@
   Network partition detected<br/><br/>
   Mnesia reports that this RabbitMQ cluster has experienced a
   network partition. There is a risk of losing data. Please read
-  <a href="http://www.rabbitmq.com/partitions.html">RabbitMQ
+  <a href="https://www.rabbitmq.com/partitions.html">RabbitMQ
   documentation about network partitions and the possible solutions</a>.
 </p>
 <p>
@@ -50,7 +50,7 @@
 </p>
 <p>
   <a target="_blank"
-  href="http://www.rabbitmq.com/partitions.html">More information on
+  href="https://www.rabbitmq.com/partitions.html">More information on
   network partitions.</a>
 </p>
 <% } %>
@@ -91,12 +91,12 @@
   </table>
 <p>
   This is a dangerous configuration; use of substantially
-  unequal <code>net_timetime</code> values can lead to partitions
+  unequal <code>net_ticktime</code> values can lead to partitions
   being falsely detected.
 </p>
 <p>
   <a target="_blank"
-  href="http://www.rabbitmq.com/nettick.html">More information on
+  href="https://www.rabbitmq.com/nettick.html">More information on
   <code>net_ticktime</code>.</a>
 </p>
 <%
