--- a/js/tmpl/channel.ejs
+++ b/js/tmpl/channel.ejs
@@ -63,6 +63,13 @@
   </tr>
 </table>
 
+<table class="facts">
+  <tr>
+    <th>Pending Raft commands</th>
+    <td><%= channel.pending_raft_commands %></td>
+  </tr>
+</table>
+
 </div>
 </div>
 
