--- a/js/tmpl/connection.ejs
+++ b/js/tmpl/connection.ejs
@@ -1,5 +1,6 @@
 <h1>Connection <%= fmt_string(connection.name) %> <%= fmt_maybe_vhost(connection.vhost) %></h1>
 
+<% if (!disable_stats) { %>
 <div class="section">
 <h2>Overview</h2>
 <div class="hider updatable">
@@ -172,7 +173,7 @@
 </div>
 
 <% } %>
-
+<% } %>
 
 <div class="section-hidden">
   <h2>Close this connection</h2>
