--- a/js/tmpl/consumers.ejs
+++ b/js/tmpl/consumers.ejs
@@ -12,6 +12,8 @@
           <th>Ack required</th>
           <th>Exclusive</th>
           <th>Prefetch count</th>
+          <th>Active <span class="help" id="consumer-active"></span></th>
+          <th>Activity status</th>
           <th>Arguments</th>
         </tr>
       </thead>
@@ -30,6 +32,8 @@
         <td class="c"><%= fmt_boolean(consumer.ack_required) %></td>
         <td class="c"><%= fmt_boolean(consumer.exclusive) %></td>
         <td class="c"><%= consumer.prefetch_count %></td>
+        <td class="c"><%= fmt_boolean(consumer.active) %></td>
+        <td class="c"><%= fmt_activity_status(consumer.activity_status) %></td>
         <td class="c"><%= fmt_table_short(consumer.arguments) %></td>
       </tr>
 <% } %>
