--- a/js/tmpl/overview.ejs
+++ b/js/tmpl/overview.ejs
@@ -1,4 +1,8 @@
-<h1>Overview</h1>
+<% if(disable_stats) { %>
+   <h1>Overview: Management only mode</h1>
+<% } else { %>
+   <h1>Overview</h1>
+<% } %>
 <% if (user_monitor) { %>
 <%= format('partition', {'nodes': nodes}) %>
 <% } %>
@@ -17,14 +21,25 @@
   <% } %>
 </p>
 <% } %>
+<% for (i = 0; i < vhosts.length; i++)
+{
+    for (var vhost_status_node in vhosts[i].cluster_state) {
+        if (vhosts[i].cluster_state[vhost_status_node] != 'running') {
+%>
+<p class="warning">
+  Virtual host <b><%= vhosts[i].name %></b> experienced an error on node <b><%= vhost_status_node %></b> and may be inaccessible
+</p>
+<% }}} %>
 </div>
 
 <div class="section">
 <h2>Totals</h2>
-<div class="hider updatable">
+<div  class="hider updatable">
+<% if(!disable_stats) { %>
 <%= queue_lengths('lengths-over', overview.queue_totals) %>
 <% if (rates_mode != 'none') { %>
   <%= message_rates('msg-rates-over', overview.message_stats) %>
+<% } %>
 <% } %>
 
 <% if (overview.object_totals) { %>
@@ -34,9 +49,11 @@
     <li>
       <a href="#/connections" class="button">Connections: <strong><%= overview.object_totals.connections %></strong></a>
     </li>
+<% if(!disable_stats) { %>
     <li>
       <a href="#/channels" class="button">Channels: <strong><%= overview.object_totals.channels %></strong></a>
     </li>
+<% } %>
     <li>
       <a href="#/exchanges" class="button">Exchanges: <strong><%= overview.object_totals.exchanges %></strong></a>
     </li>
@@ -63,6 +80,7 @@
 <table class="list">
   <tr>
     <th>Name</th>
+  <% if(!disable_stats) { %>
   <% if (show_column('overview', 'file_descriptors')) { %>
     <th>File descriptors <span class="help" id="file-descriptors"></span></th>
   <% } %>
@@ -73,7 +91,7 @@
     <th>Erlang processes</th>
   <% } %>
   <% if (show_column('overview', 'memory')) { %>
-    <th>Memory</th>
+    <th>Memory <span class="help" id="memory-calculation-strategy"></span></th>
   <% } %>
   <% if (show_column('overview', 'disk_space')) { %>
     <th>Disk space</th>
@@ -88,12 +106,17 @@
     <th>Reset stats</th>
   <% } %>
     <th class="plus-minus"><span class="popup-options-link" title="Click to change columns" type="columns" for="overview">+/-</span></th>
+  <% } %>
   </tr>
 <%
    for (var i = 0; i < nodes.length; i++) {
      var node = nodes[i];
-     var colspan = group_count('overview', 'Statistics', []) +
-                   group_count('overview', 'General', []);
+     if(!disable_stats) {
+          var colspan = group_count('overview', 'Statistics', []) +
+                        group_count('overview', 'General', []);
+                        } else {
+          var colspan = [];
+          }
 %>
    <tr<%= alt_rows(i)%>>
      <td>
@@ -102,6 +125,7 @@
          <sub>RabbitMQ <%= fmt_rabbit_version(node.applications) %></sub>
        <% } %>
      </td>
+<% if(!disable_stats) { %>
 <% if (!node.running) { %>
      <td colspan="<%= colspan %>">
        <div class="status-red">
@@ -173,6 +197,7 @@
          <abbr title="Broker definitions are held in RAM. Messages will still be written to disc if necessary.">RAM</abbr>
        <% } %>
        <%= fmt_plugins_small(node) %>
+        <abbr title="Memory calculation strategy"><%= fmt_string(node.mem_calculation_strategy) %></abbr>
      </td>
   <% } %>
   <% if(user_administrator && show_column('overview', 'reset_stats')) { %>
@@ -186,6 +211,7 @@
       </form>
   <% } %>
 <% } %>
+<% } %>
    </tr>
 <% } %>
 </table>
@@ -193,6 +219,31 @@
 </div>
 </div>
 
+<% if(!disable_stats) { %>
+<div class="section-hidden">
+<h2>Churn statistics</h2>
+<div class="hider updatable">
+  <%= rates_chart_or_text('connection-churn', overview.churn_rates,
+      [['Created', 'connection_created'],
+       ['Closed', 'connection_closed']],
+      fmt_rate, fmt_rate_axis, true, 'Connection operations', 'connection-operations') %>
+
+  <%= rates_chart_or_text('channel-churn', overview.churn_rates,
+      [['Created', 'channel_created'],
+       ['Closed', 'channel_closed']],
+      fmt_rate, fmt_rate_axis, true, 'Channel operations', 'channel-operations') %>
+
+  <%= rates_chart_or_text('queue-churn', overview.churn_rates,
+      [['Declared', 'queue_declared'],
+       ['Created', 'queue_created'],
+       ['Deleted', 'queue_deleted']],
+      fmt_rate, fmt_rate_axis, true, 'Queue operations', 'queue-operations') %>
+
+</div>
+</div>
+<% } %>
+
+<% if(!disable_stats) { %>
 <div class="section-hidden">
 <h2>Ports and contexts</h2>
 <div class="hider updatable">
@@ -250,6 +301,7 @@
 </table>
 </div>
 </div>
+<% } %>
 
 <div class="section-hidden administrator-only">
 <h2>Export definitions</h2>
