--- a/js/tmpl/vhost.ejs
+++ b/js/tmpl/vhost.ejs
@@ -7,6 +7,7 @@
 </p>
 <% } %>
 
+<% if (!disable_stats) { %>
 <div class="section">
   <h2>Overview</h2>
   <div class="hider updatable">
@@ -20,12 +21,35 @@
       <tr>
         <th>Tracing enabled:</th>
         <td><%= fmt_boolean(vhost.tracing) %></td>
+      <tr>
+        <th>State:</th>
+        <td>
+        <table class="mini">
+        <% for (var node in vhost.cluster_state) { %>
+            <tr>
+            <th><%= fmt_escape_html(node) %> :</th>
+            <td><%= vhost.cluster_state[node] %>
+            <% if (vhost.cluster_state[node] == "stopped"){ %>
+                <form action="#/restart_vhost" method="post">
+                    <input type="hidden" name="node" value="<%= node %>"/>
+                    <input type="hidden" name="vhost" value="<%= vhost.name %>"/>
+                    <input type="submit" value="Restart"/>
+                </form>
+            <% } %>
+            </td>
+            </tr>
+        <% } %>
+        </table>
+        </td>
       </tr>
     </table>
 </div>
 </div>
+<% } %>
 
 <%= format('permissions', {'mode': 'vhost', 'permissions': permissions, 'users': users, 'parent': vhost}) %>
+
+<%= format('topic-permissions', {'mode': 'vhost', 'topic_permissions': topic_permissions, 'users':users, 'parent': vhost, 'exchanges': exchanges}) %>
 
 <div class="section-hidden">
 <h2>Delete this vhost</h2>
