add support for multiple cluster management

--- a/js/tmpl/layout.ejs
+++ b/js/tmpl/layout.ejs
@@ -32,6 +32,11 @@
     <% } %>
     </li>
   </ul>
+  <div id="hostlist">
+    <table class="form">
+      <tr><td>当前主机(集群)：</td><td id="curhost" class="curhost"></td><td><select id="host"></select></td></tr>
+    </table>
+  </div>
   <div id="logo">
     <a href="#/"><img src="img/rabbitmqlogo.svg" alt="RabbitMQ logo" width="204" height="37"/></a>
     <span id="versions"></span>
